GithubMiner: Versión funcional